# cwa-code-gen

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  items.proto  main.rs  public_cert
