[package]
name = "cwa-qr-generator"
version = "0.1.0"
authors = ["Folke Gleumes <folke@gleumes.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
bytes = "1.0"
rand = { version = "0.8.3", features = ["std_rng"] }
qrcode = "0.12"
image = "0.23"
clap = "3.0.0-beta.2"
base64-url = "1.4.10"
chrono = "0.4"

[build-dependencies]
prost-build = "0.7.0"